--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 <body>
   <div id="app">APPLICATION CONTENT</div>
   <script>__REACT_DEVTOOLS_GLOBAL_HOOK__ = parent.__REACT_DEVTOOLS_GLOBAL_HOOK__</script>
+  <script src="https://use.fontawesome.com/877ef23c2a.js"></script>
   <script type="text/javascript" src="/assets/app.js"></script>
 </body>
 </html>
